Cherry-pick 279126@main (3a6e636fb3be). https://bugs.webkit.org/show_bug.cgi?id=274523

Fix linker error in JSC testing configuration
    https://bugs.webkit.org/show_bug.cgi?id=274523
    rdar://128542072

    Reviewed by Mark Lam.

    It seems like someone holding a Ref/RefPtr to UnlinkedMetadataTable didn't
    include the inlines header. Rather than figure out how to find the missing
    include I just moved the destructor to the .cpp file. I don't think the
    destructor is hot enough that inlining is needed.

    * Source/JavaScriptCore/bytecode/UnlinkedMetadataTable.cpp:
    (JSC::UnlinkedMetadataTable::~UnlinkedMetadataTable):
    * Source/JavaScriptCore/bytecode/UnlinkedMetadataTableInlines.h:
    (JSC::UnlinkedMetadataTable::~UnlinkedMetadataTable): Deleted.

    Canonical link: https://commits.webkit.org/279126@main

Canonical link: https://commits.webkit.org/274313.429@webkitglib/2.44