Source/JavaScriptCore/bytecode/UnlinkedMetadataTable.cpp
@@ -170,4 +170,11 @@ void UnlinkedMetadataTable::finalize()
     }
 }
 
+UnlinkedMetadataTable::~UnlinkedMetadataTable()
+{
+    ASSERT(!m_isLinked);
+    if (m_hasMetadata)
+        MetadataTableMalloc::free(m_rawBuffer);
+}
+
 } // namespace JSC
